--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,8 @@ requires = ["setuptools>=68.2"]
 
 [tool.towncrier]
 directory = "news/"
-filename = "CHANGES.rst"
-title_format = "{version} ({project_date})"
+filename = "CHANGES.md"
+title_format = "## {version} ({project_date})"
 underlines = ["-", ""]
 
 [[tool.towncrier.type]]
