--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,10 +5,14 @@
 requires = ["setuptools>=68.2"]
 
 [tool.towncrier]
-directory = "news/"
 filename = "CHANGES.md"
+directory = "news/"
+start_string = "<!-- towncrier release notes start -->\n"
 title_format = "## {version} ({project_date})"
-underlines = ["-", ""]
+issue_format = "Issue [#{issue}](https://github.com/syslabcom/scrum/issues/{issue})"
+# First underline is used for version/date header.
+# Second underline is used for the type names (like 'Bug fixes:').
+underlines = ["", "", ""]
 
 [[tool.towncrier.type]]
 directory = "breaking"
